New links created

--- a/module_8.html
+++ b/module_8.html
@@ -59,17 +59,17 @@
                                     <i class="fas fa-list"></i>
                                     Courses
                                 </a>
-                                <a href="/en-US/pages/module_1.html" class="nav-link link-dark">
+                                <a href="/module_1.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
                                     Course I. Python
                                 </a>
-                                <a href="/en-US/pages/module_2.html" class="nav-link link-dark">
+                                <a href="/module_2.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
                                     Course II. HTML and CSS
                                 </a>
-                                <a href="/en-US/pages/module_3.html" class="nav-link link-dark">
+                                <a href="/module_3.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
                                     Course III. Foundations of Flask<br />
@@ -77,27 +77,27 @@
                                     <i class="fas fa-fw"></i>
                                     Creating Web Applications
                                 </a>
-                                <a href="/en-US/pages/module_4.html" class="nav-link link-dark">
+                                <a href="/module_4.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
                                     Course IV. Git. Github..
                                 </a>
-                                <a href="/en-US/pages/module_5.html" class="nav-link link-dark">
+                                <a href="/module_5.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
                                     Course V. SQL
                                 </a>
-                                <a href="/en-US/pages/module_6.html" class="nav-link link-dark">
+                                <a href="/module_6.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
                                     Course VI. Web Scraping. APIs.
                                 </a>
-                                <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
+                                <a href="/module_7.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
                                     Course VII. Java Script.
                                 </a>
-                                <a href="/en-US/pages/module_8.html" class="nav-link link-dark">
+                                <a href="/module_8.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
                                     Course VIII. Developing a<br />
@@ -107,7 +107,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="/en-US/pages/signup.html" class="nav-link link-dark">
+                                <a href="/signup.html" class="nav-link link-dark">
                                     <i class="fas fa-check"></i>
                                     Register for Classes
                                 </a>
@@ -150,17 +150,17 @@
                                 <i class="fas fa-list"></i>
                                 Courses
                             </a>
-                            <a href="/en-US/pages/module_1.html" class="nav-link link-dark">
+                            <a href="/module_1.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
                                 Course I. Python
                             </a>
-                            <a href="/en-US/pages/module_2.html" class="nav-link link-dark">
+                            <a href="/module_2.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
                                 Course II. HTML and CSS
                             </a>
-                            <a href="/en-US/pages/module_3.html" class="nav-link link-dark">
+                            <a href="/module_3.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
                                 Course III. Foundations of Flask<br />
@@ -168,27 +168,27 @@
                                 <i class="fas fa-fw"></i>
                                 Creating Web Applications
                             </a>
-                            <a href="/en-US/pages/module_4.html" class="nav-link link-dark">
+                            <a href="/module_4.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
                                 Course IV. Git. Github.
                             </a>
-                            <a href="/en-US/pages/module_5.html" class="nav-link link-dark">
+                            <a href="/module_5.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
                                 Course V. SQL
                             </a>
-                            <a href="/en-US/pages/module_6.html" class="nav-link link-dark">
+                            <a href="/module_6.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
                                 Course VI. Web Scraping. APIs.
                             </a>
-                            <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
+                            <a href="/module_7.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
                                 Course VII. Java Script.
                             </a>
-                            <a href="/en-US/pages/module_8.html" class="nav-link link-dark">
+                            <a href="/module_8.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
                                 Course VIII. Developing a<br />
@@ -198,7 +198,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/en-US/pages/signup.html" class="nav-link link-dark">
+                            <a href="/signup.html" class="nav-link link-dark">
                                 <i class="fas fa-check"></i>
                                 Register for Classes
                             </a>
@@ -225,8 +225,8 @@
                                 <img class="d-block w-100 img-darken05" src="/static/module4_3-crop.png" alt="Third slide">
                             </div>
                             <div class="centervh">
-                                <h2 class="text-light carousel-text-line1">Course VII</h2>
-                                <h1 class="text-light carousel-text-line2">Java Script</h1>
+                                <h2 class="text-light carousel-text-line1">Course VIII</h2>
+                                <h1 class="text-light carousel-text-line2">Professional Portfolio</h1>
                             </div>
                         </div>
                     </div>
@@ -237,20 +237,22 @@
                             <div class="row">
                                 <div class="col-12">
                                     <p>
-                                        In this course, students will study Java Script concepts:
+                                        In this course, students will develop the following *Web Applications:
                                     </p>
                                     <ul>
-                                        <li> Variables</li>   
-                                        <li>Data types</li>
-                                        <li>Operators</li>
-                                        <li>Expressions</li>
-                                        <li>Control Structures: if, else, switch, for, while, do-while.</li>
-                                        <li>Functions: Function declarations, function expressions, arrow functions, parameters, and return values.</li>
-                                        <li>Objects: Object literals, properties, methods, and prototypes.</li>
-                                        <li>Arrays: Array methods (map, filter, reduce, forEach), array destructuring, spread operator.</li>
-                                        <li>Prototypes and Inheritance</li>
+                                        <li>To do list</li>
+                                        <li>Notes App</li>
+                                        <li>Quiz app</li>
+                                        <li>API bot</li>
+                                        <li>Blog App</li>
+                                        <li>Portfolio Website</li>
+                                        <li>Currency Converter</li>
+                                        <li>Flashcards App</li>
+                                        <li>Password generator</li>
+                                        <li>Sales Receipt App</li>
                                     </ul>  
                                     <br>
+                                    <p class="card text">Types of Web Applications are subject to change.</p>
                                     <!-- <h5 style="margin-bottom: 15px">Course duration – 25 classes.</h5> -->
                                     <!-- <h5>We do not recommend skipping classes in this course.</h5> -->
                                     <br>  
