--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                         <ul class="nav nav-pills flex-column mb-auto">
                             <li class="nav-item">
-                                <a href="/"  class="nav-link link-dark" aria-current="page">
+                                <a href="/" class="nav-link link-dark" aria-current="page">
                                     <i class="fas fa-home"></i>
                                     Home Page
                                 </a>
@@ -57,17 +57,17 @@
                                     <i class="fas fa-list"></i>
                                     Courses
                                 </a>
-                                <a href="/en-US/pages/module_1.html" class="nav-link link-dark">
+                                <a href="/module_1.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
                                     Level I. Python
                                 </a>
-                                <a href="/en-US/pages/module_2.html" class="nav-link link-dark">
+                                <a href="/module_2.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
                                     Level II. HTML and CSS
                                 </a>
-                                <a href="/en-US/pages/module_3.html" class="nav-link link-dark">
+                                <a href="/module_3.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
                                     Level III. Foundations of Flask<br />
@@ -75,27 +75,27 @@
                                     <i class="fas fa-fw"></i>
                                     Creating Web Applications
                                 </a>
-                                <a href="/en-US/pages/module_4.html" class="nav-link link-dark">
+                                <a href="/module_4.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
                                     Level IV. Git. Github.
                                 </a>
-                                <a href="/en-US/pages/module_5.html" class="nav-link link-dark">
+                                <a href="/module_5.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
                                     Level V. SQL
                                 </a>
-                                <a href="/en-US/pages/module_6.html" class="nav-link link-dark">
+                                <a href="/module_6.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
                                     Level VI. Web Scraping. APIs.
                                  </a>
-                                 <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
+                                 <a href="/module_7.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
                                     Level VII. Java Script.
                                 </a>
-                                <a href="/en-US/pages/module_8.html" class="nav-link link-dark">
+                                <a href="/module_8.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
                                     Level VIII. Developing a<br />
@@ -105,7 +105,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="/en-US/pages/signup.html" class="nav-link link-dark">
+                                <a href="/signup.html" class="nav-link link-dark">
                                     <i class="fas fa-check"></i>
                                     Register for Classes
                                 </a>
@@ -147,17 +147,17 @@
                                 <i class="fas fa-list"></i>
                                 Courses
                             </a>
-                            <a href="/en-US/pages/module_1.html" class="nav-link link-dark">
+                            <a href="/module_1.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
                                 Level I. Python
                             </a>
-                            <a href="/en-US/pages/module_2.html" class="nav-link link-dark">
+                            <a href="/module_2.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
                                 Level II. HTML and CSS
                             </a>
-                            <a href="/en-US/pages/module_3.html" class="nav-link link-dark">
+                            <a href="/module_3.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
                                 Level III. Foundations of Flask<br />
@@ -165,27 +165,27 @@
                                 <i class="fas fa-fw"></i>
                                 Creating Web Applications
                             </a>
-                            <a href="/en-US/pages/module_4.html" class="nav-link link-dark">
+                            <a href="/module_4.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
                                 Level IV. Git. Github.
                             </a>
-                            <a href="/en-US/pages/module_5.html" class="nav-link link-dark">
+                            <a href="/module_5.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
                                 Level V. SQL
                             </a>
-                            <a href="/en-US/pages/module_6.html" class="nav-link link-dark">
+                            <a href="/module_6.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
                                 Level VI. Web Scraping. APIs.
                             </a>
-                            <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
+                            <a href="/module_7.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
                                 Level VII. Java Script.
                             </a>
-                            <a href="/en-US/pages/module_8.html" class="nav-link link-dark">
+                            <a href="/module_8.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
                                 Level VIII. Developing a<br />
@@ -195,7 +195,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/en-US/pages/signup.html" class="nav-link link-dark">
+                            <a href="/signup.html" class="nav-link link-dark">
                                 <i class="fas fa-check"></i>
                                 Register for Classes
                             </a>
