Last mods in M8 and signup

--- a/signup.html
+++ b/signup.html
@@ -272,7 +272,7 @@
                             <br> 
                             <p class="card text-center">Call Us or Text: (908)830-5127 </p>  
                                 <br>                   
-                            <p class="font-size 14">*Classes are held in Milltown, NJ 08850
+                            <p class="card text-center">*Classes are held in Milltown, NJ 08850</p>
                             <br>
                             
                         </div>
