--- a/module_8.html
+++ b/module_8.html
@@ -252,7 +252,7 @@
                                         <li>Sales Receipt App</li>
                                     </ul>  
                                     <br>
-                                    <p class="card text">Types of Web Applications are subject to change.</p>
+                                    <p class="text-size 14">*Types of Web Applications are subject to change.</p>
                                     <!-- <h5 style="margin-bottom: 15px">Course duration – 25 classes.</h5> -->
                                     <!-- <h5>We do not recommend skipping classes in this course.</h5> -->
                                     <br>  
