All the styling and final hopefully changes

--- a/index_old.html
+++ b/index_old.html
@@ -49,7 +49,7 @@
                             <li class="nav-item">
                                 <a href="/"  class="nav-link link-dark" aria-current="page">
                                     <i class="fas fa-home"></i>
-                                    Home Page
+                                    Home
                                 </a>
                             </li>
                             <li>
@@ -93,7 +93,7 @@
                                  <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Level VII. Java Script.
+                                    Level VII. JavaScript
                                 </a>
                                 <a href="/en-US/pages/module_8.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
@@ -139,7 +139,7 @@
                         <li class="nav-item">
                             <a href="/" class="nav-link link-dark" aria-current="page">
                                 <i class="fas fa-home"></i>
-                                Home Page
+                                Home
                             </a>
                         </li>
                         <li>
@@ -183,7 +183,7 @@
                             <a href="/en-US/pages/module_7.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Level VII. Java Script.
+                                Level VII. JavaScript
                             </a>
                             <a href="/en-US/pages/module_8.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
