--- a/module_2.html
+++ b/module_2.html
@@ -49,7 +49,7 @@
                             <li class="nav-item">
                                 <a href="/" class="nav-link link-dark" aria-current="page">
                                     <i class="fas fa-home"></i>
-                                    Home Page
+                                    Home
                                 </a>
                             </li>
                             <li>
@@ -93,7 +93,7 @@
                                 <a href="/module_7.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Course VII. Java Script.
+                                    Course VII. JavaScript
                                 </a>
                                 <a href="/module_8.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
@@ -140,7 +140,7 @@
                         <li class="nav-item">
                             <a href="/" class="nav-link link-dark" aria-current="page">
                                 <i class="fas fa-home"></i>
-                                Home Page
+                                Home
                             </a>
                         </li>
                         <li>
@@ -184,7 +184,7 @@
                             <a href="/module_7.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Course VII. Java Script.
+                                Course VII. JavaScript
                             </a>
                             <a href="/module_8.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
@@ -212,13 +212,13 @@
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item carousel-item250 active">
-                                <img class="d-block w-100 img-darken05" src="/static/module2_1-crop.png" alt="First slide">
+                                <img class="d-block w-100 img-darken03" src="/static/module2_1-crop.png" alt="First slide">
                             </div>
                             <div class="carousel-item carousel-item250">
                                 <img class="d-block w-100 img-darken05" src="/static/module2_2-crop.png" alt="Second slide">
                             </div>
                             <div class="carousel-item carousel-item250">
-                                <img class="d-block w-100 img-darken05" src="/static/module2_3-crop.png" alt="Third slide">
+                                <img class="d-block w-100 img-darken03" src="/static/module2_3-crop.png" alt="Third slide">
                             </div>
                             <div class="centervh">
                                 <h2 class="text-light carousel-text-line1">Course II</h2>
