--- a/module_7.html
+++ b/module_7.html
@@ -51,7 +51,7 @@
                             <li class="nav-item">
                                 <a href="/" class="nav-link link-dark" aria-current="page">
                                     <i class="fas fa-home"></i>
-                                    Home Page
+                                    Home
                                 </a>
                             </li>
                             <li>
@@ -95,7 +95,7 @@
                                 <a href="/module_7.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Course VII. Java Script.
+                                    Course VII. JavaScript
                                 </a>
                                 <a href="/module_8.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
@@ -142,7 +142,7 @@
                         <li class="nav-item">
                             <a href="/" class="nav-link link-dark" aria-current="page">
                                 <i class="fas fa-home"></i>
-                                Home Page
+                                Home
                             </a>
                         </li>
                         <li>
@@ -186,7 +186,7 @@
                             <a href="/module_7.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Course VII. Java Script.
+                                Course VII. JavaScript
                             </a>
                             <a href="/module_8.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
@@ -216,17 +216,17 @@
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item carousel-item250 active">
-                                <img class="d-block w-100 img-darken05" src="/static/module4_1-crop.png" alt="First slide">
+                                <img class="d-block w-100 img-darken03" src="/static/module4_1-crop.png" alt="First slide">
                             </div>
                             <div class="carousel-item carousel-item250">
-                                <img class="d-block w-100 img-darken05" src="/static/module4_2-crop.png" alt="Second slide">
+                                <img class="d-block w-100 img-darken03" src="/static/module4_2-crop.png" alt="Second slide">
                             </div>
                             <div class="carousel-item carousel-item250">
                                 <img class="d-block w-100 img-darken05" src="/static/module4_3-crop.png" alt="Third slide">
                             </div>
                             <div class="centervh">
                                 <h2 class="text-light carousel-text-line1">Course VII</h2>
-                                <h1 class="text-light carousel-text-line2">Java Script</h1>
+                                <h1 class="text-light display-1 carousel-text-line2">JavaScript</h1>
                             </div>
                         </div>
                     </div>
@@ -237,7 +237,7 @@
                             <div class="row">
                                 <div class="col-12">
                                     <p>
-                                        In this course, students will study Java Script concepts:
+                                        In this course, students will study JavaScript concepts:
                                     </p>
                                     <ul>
                                         <li> Variables</li>   
