--- a/signup.html
+++ b/signup.html
@@ -67,7 +67,7 @@
                             <li class="nav-item">
                                 <a href="/" class="nav-link link-dark" aria-current="page">
                                     <i class="fas fa-home"></i>
-                                    Home Page
+                                    Home
                                 </a>
                             </li>
                             <li>
@@ -111,7 +111,7 @@
                                  <a href="/module_7.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Course VII. Java Script.
+                                    Course VII. JavaScript
                                 </a>
                                 <a href="/module_8.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
@@ -157,7 +157,7 @@
                         <li class="nav-item">
                             <a href="/" class="nav-link link-dark" aria-current="page">
                                 <i class="fas fa-home"></i>
-                                Home Page
+                                Home
                             </a>
                         </li>
                         <li>
@@ -201,7 +201,7 @@
                             <a href="/module_7.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Course VII. Java Script.
+                                Course VII. JavaScript
                             </a>
                             <a href="/module_8.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
