--- a/module_3.html
+++ b/module_3.html
@@ -49,7 +49,7 @@
                             <li class="nav-item">
                                 <a href="/" class="nav-link link-dark" aria-current="page">
                                     <i class="fas fa-home"></i>
-                                    Home Page
+                                    Home
                                 </a>
                             </li>
                             <li>
@@ -93,7 +93,7 @@
                                 <a href="/module_7.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
                                     <i class="fas fa-minus"></i>
-                                    Course VII. Java Script.
+                                    Course VII. JavaScript
                                 </a>
                                 <a href="/module_8.html" class="nav-link link-dark">
                                     <i class="fas fa-fw"></i>
@@ -140,7 +140,7 @@
                         <li class="nav-item">
                             <a href="/" class="nav-link link-dark" aria-current="page">
                                 <i class="fas fa-home"></i>
-                                Home Page
+                                Home
                             </a>
                         </li>
                         <li>
@@ -184,7 +184,7 @@
                             <a href="/module_7.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
                                 <i class="fas fa-minus"></i>
-                                Course VII. Java Script.
+                                Course VII. JavaScript
                             </a>
                             <a href="/module_8.html" class="nav-link link-dark">
                                 <i class="fas fa-fw"></i>
@@ -215,14 +215,14 @@
                                 <img class="d-block w-100 img-darken05" src="/static/module3_1-crop.png" alt="First slide">
                             </div>
                             <div class="carousel-item carousel-item250">
-                                <img class="d-block w-100 img-darken05" src="/static/module3_2-crop.png" alt="Second slide">
+                                <img class="d-block w-100 img-darken03" src="/static/module3_2-crop.png" alt="Second slide">
                             </div>
                             <div class="carousel-item carousel-item250">
                                 <img class="d-block w-100 img-darken05" src="/static/module3_3-crop.png" alt="Third slide">
                             </div>
                             <div class="centervh">
                                 <h2 class="text-light carousel-text-line1">Course III</h2>
-                                <h1 class="text-light display-1 carousel-text-line2">Flask</h1>
+                                <h2 class="text-light display-1 carousel-text-line2">Flask</h1>
                                 <h1 class="text-light carousel-text-line2">Creating Web Applications</h1>
                             </div>
                         </div>
